Début css, ajout templates bannière, footer et barre de nav

--- a/templates/accueil.html
+++ b/templates/accueil.html
@@ -1,1 +1,19 @@
-<p>Hey</p>
+<div id="formRecherche">
+    <form action="#" method="post">
+        <input type="text" placeholder="Départ" name="depart" />
+        <input type="text" placeholder="Arrivée" name="arrivee" />
+        <input type="date" placeholder="Date" name="date" />
+        <input type="submit" value="Rechercher" />
+    </form>
+</div>
+
+<div>
+    <p>
+    
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque viverra ultricies bibendum. Integer condimentum neque ullamcorper lectus molestie tempor. Donec vehicula in nisl a dapibus. Quisque in felis ullamcorper, tincidunt erat nec, interdum purus. Sed id viverra tellus, sed bibendum nibh. Donec egestas risus sed arcu lacinia, sit amet varius nisl facilisis. Mauris consequat lobortis fermentum. Praesent suscipit lacus vitae massa pretium vulputate.<br />
+
+        Aliquam erat volutpat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi vehicula, nibh vitae lobortis facilisis, ante velit fringilla risus, eu eleifend urna sapien et justo. Aliquam a lacus non odio mollis porta. Nam pulvinar tellus urna, ut pellentesque velit finibus eget. Quisque pharetra est at purus vehicula dictum. Aliquam consectetur tellus risus, sit amet auctor metus auctor non. Morbi in mauris nec orci dictum consectetur eu a eros. Nulla at vehicula sem, id hendrerit tellus. Aliquam erat volutpat. Etiam sit amet vulputate turpis. <br />
+
+        Pellentesque sed euismod lectus, eget vulputate libero. Proin tristique magna urna, in bibendum metus semper vel. Fusce at urna scelerisque, molestie sem scelerisque, porttitor felis. Donec lorem est, venenatis et elit a, tincidunt bibendum quam. Suspendisse sed metus ac lacus porttitor iaculis in vitae quam. Aliquam ac nibh elit. Pellentesque justo nulla, sagittis ut posuere ut, congue a justo. Suspendisse facilisis tortor ut sapien sagittis venenatis. Nam aliquet mi velit, id porttitor elit congue vel. Aliquam a aliquam augue. Maecenas dapibus justo facilisis, consequat massa sollicitudin, facilisis nisi. <br />
+    </p>
+</div>
