debut d'integration de la partie graphique

--- a/templates/nav_invite.html
+++ b/templates/nav_invite.html
@@ -1,5 +1,4 @@
 <p>
-        <a href="index.php">Accueil</a>
         <a href="index.php?page=inscription">Inscription</a>
-        <a href="#">Connexion</a>
+        <a href="index.php">Connexion</a>
 </p>
