bdd qui marche cette fois

--- a/templates/nav_invite.html
+++ b/templates/nav_invite.html
@@ -1,4 +1,6 @@
 <p>
         <a href="index.php?page=inscription">Inscription</a>
         <a href="index.php">Connexion</a>
+        <a href="index.php?page=recherche">Rechercher un voyage</a>
+        <a href="index.php?page=ajoutVoyage">Ajouter un voyage</a>
 </p>
